--- a/work-with-stars.html
+++ b/work-with-stars.html
@@ -271,6 +271,7 @@
                                 class="testimonial-item text-center text-white"
                             >
                                 <img
+                                    style="object-fit: cover"
                                     class="img-fluid mx-auto rounded mb-4"
                                     src="img/testimonial-1.jpg"
                                     alt=""
@@ -289,8 +290,9 @@
                                 class="testimonial-item text-center text-white"
                             >
                                 <img
+                                    style="object-fit: cover"
                                     class="img-fluid mx-auto rounded mb-4"
-                                    src="img/testimonial-2.jpg"
+                                    src="img/testimonial-4.jpg"
                                     alt=""
                                 />
                                 <p class="fs-5">
@@ -307,6 +309,7 @@
                                 class="testimonial-item text-center text-white"
                             >
                                 <img
+                                    style="object-fit: cover"
                                     class="img-fluid mx-auto rounded mb-4"
                                     src="img/testimonial-3.jpg"
                                     alt=""
@@ -325,8 +328,9 @@
                                 class="testimonial-item text-center text-white"
                             >
                                 <img
+                                    style="object-fit: cover"
                                     class="img-fluid mx-auto rounded mb-4"
-                                    src="img/testimonial-4.jpg"
+                                    src="img/testimonial-2.jpg"
                                     alt=""
                                 />
                                 <p class="fs-5">
