--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 
         <!-- Offer Start -->
         <div
-            class="container-fluid bg-offer my-5 py-5 wow fadeInUp"
+            class="container-fluid bg-offer-2 my-5 py-5 wow fadeInUp"
             data-wow-delay="0.1s"
         >
             <div class="container py-5">
