--- a/passport.html
+++ b/passport.html
@@ -183,6 +183,7 @@
                             <div class="price-item pb-4 col-lg-6 col-sm-12">
                                 <div class="position-relative">
                                     <img
+                                        style="height: 450px; object-fit: cover"
                                         class="img-fluid rounded-top"
                                         src="img/passport-1.jpg"
                                         alt=""
@@ -207,6 +208,7 @@
                             <div class="price-item pb-4 col-lg-6 col-sm-12">
                                 <div class="position-relative">
                                     <img
+                                        style="height: 450px; object-fit: cover"
                                         class="img-fluid rounded-top"
                                         src="img/passport-2.jpg"
                                         alt=""
@@ -230,6 +232,7 @@
                             <div class="price-item pb-4 col-lg-6 col-sm-12">
                                 <div class="position-relative">
                                     <img
+                                        style="height: 450px; object-fit: cover"
                                         class="img-fluid rounded-top"
                                         src="img/passport-3.jpg"
                                         alt=""
@@ -253,8 +256,9 @@
                             <div class="price-item pb-4 col-lg-6 col-sm-12">
                                 <div class="position-relative">
                                     <img
+                                        style="height: 450px; object-fit: cover"
                                         class="img-fluid rounded-top"
-                                        src="img/passport-3.jpg"
+                                        src="img/passport-4.jpg"
                                         alt=""
                                     />
                                 </div>
