--- a/price.html
+++ b/price.html
@@ -221,10 +221,11 @@
                                         class="text-primary w-50 mx-auto mt-0"
                                     />
                                     <p>
-                                        Enthält eine einstündige Fotosession an
-                                        einem Ort Ihrer Wahl in der Schweiz. Sie
-                                        erhalten 10 bearbeitete hochauflösende
-                                        Fotos.
+                                        Unser Standard-Paket bietet Ihnen eine
+                                        einstündige Fotosession an einem Ort
+                                        Ihrer Wahl in der Schweiz. Dieses Paket
+                                        eignet sich hervorragend für
+                                        Einzelporträts.
                                     </p>
                                 </div>
                             </div>
@@ -301,7 +302,7 @@
 
         <!-- Offer Start -->
         <div
-            class="container-fluid bg-offer my-5 py-5 wow fadeInUp"
+            class="container-fluid bg-offer-3 my-5 py-5 wow fadeInUp"
             data-wow-delay="0.1s"
         >
             <div class="container py-5">
